--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -29,6 +29,14 @@ on:
         default: false
   workflow_call:
     inputs:
+      sdk_url:
+        description: "Override ULTRALIGHT_SDK_URL (raw .7z in base-sdk branch)"
+        required: false
+        type: string
+      version:
+        description: "Override ULTRALIGHT_VERSION (eg. 1.4.0)"
+        required: false
+        type: string
       webbrowser_version:
         description: "Override build version name (default 'dev')"
         required: false
@@ -50,6 +58,9 @@ jobs:
     permissions:
       contents: read
       actions: write
+    env:
+      ULTRALIGHT_SDK_URL: ${{ inputs.sdk_url || github.event.inputs.sdk_url }}
+      ULTRALIGHT_VERSION: ${{ inputs.version || github.event.inputs.version }}
     steps:
       - name: 1. Checkout Code (with submodules)
         uses: actions/checkout@v4
